--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,33 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@assets/*": [
+        "./assets/*"
+      ],
+      "@styles/*": [
+        "./styles/*"
+      ],
+      "@utils/*": [
+        "./utils/*"
+      ],
+      "@constants/*": [
+        "./constants/*"
+      ],
+      "@components": [
+        "./components/ui"
+      ],
+      "@pages/*": [
+        "./components/pages/*"
+      ],
+      "@store": [
+        "./store"
+      ],
+      "@hooks": [
+        "./hooks"
+      ]
+    },
+    "downlevelIteration": true,
     "target": "es5",
     "lib": [
       "dom",
@@ -18,7 +46,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitAny": false,
+    "experimentalDecorators": true,
+    "useDefineForClassFields": true
   },
   "include": [
     "src"
