--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@storybook/react": "^6.4.19",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.47",
-    "@types/react": "^16.14.24",
-    "@types/react-dom": "^16.9.14",
+    "bem-cn": "^3.0.1",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.2",
