--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
       "@constants/*": [
         "./constants/*"
       ],
+      "@services/*": [
+        "./services/*"
+      ],
       "@components": [
         "./components/ui"
       ],
