--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
+        "plugin:react-hooks/recommended",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
@@ -22,6 +23,7 @@
     "plugins": [
         "react",
         "@typescript-eslint",
+        "react-hooks",
         "prettier"
     ],
     "settings": {
