--- a/package.json
+++ b/package.json
@@ -35,23 +35,8 @@
     "build": "craco build",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
+    "build-storybook": "build-storybook -s public",
+    "lint": "eslint 'src/**/*.{ts,tsx}' --fix"
   },
   "browserslist": {
     "production": [
